--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <h4 class="article-title">Empowering communities to break the cycle of poverty</h4>
                     <p class="article-4-paragraph-1">Poverty is a complex issue that affects millions of people
                         worldwide. Our charity organization is committed to breaking the cycle of poverty by
-                        empowering communities and providing them....</p>
+                        empowering communities and providing them...</p>
                     <p class="article-4-paragraph-2"></p>
 
 
