--- a/cycle-poverty.html
+++ b/cycle-poverty.html
@@ -20,17 +20,19 @@
     <nav>
 
         <div class="topnav" id="myTopnav">
-            <img src="/images/hear&soulLogo.png" class="logo-position">
-
+            <a href="index.html" class="logolink">
+                <img src="/images/hear&soulLogo.png" class="logo-position">
+            </a>
             <a href="index.html" class="hover-underline-animation">HOME</a>
             <a href="about-us.html" class="hover-underline-animation">ABOUT US</a>
-            <a href="get_involved.html" class=" hover-underline-animation">GET INVOLVED</a>
-            <a href="gallery.html" class="hover-underline-animation">GALLERY</a>
-            <a href="test.html" class=" hover-underline-animation">CONTACT US</a>
+            <a href="get_involved.html" class="hover-underline-animation">GET INVOLVED</a>
+            <a href="gallery.html" class=" hover-underline-animation">GALLERY</a>
+            <a href="contact-us.html" class=" hover-underline-animation">CONTACT US</a>
 
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                 <i class="fa fa-bars"></i>
             </a>
+            <div class="responsive-nav-gap"></div>
             <hr>
         </div>
 
@@ -69,100 +71,97 @@
         </div>
     </div>
     <div class="also-in-this-section-cycle">
-        <h2>Also in this section</h2>
+        <h2><u class="u">Also in this sect</u>ion</h2>
+    </div>
+    <div class="article-1-light-shadow">
 
-        <div class="article-1-light-shadow">
-
-            <img src="/images/school-kid.jpg" class="article-1-picture">
-            <h4 class="article-title">FOOD DONATIONS</h4>
-            <p class="article-1-paragraph-1">The Heart and Soul Foundation is an organization that is dedicated to
-                helping those in need by providing
-                food support to the children and elderly people in our care. There are many reasons why donating
-                food
-                to our organization is a worthwhile and impactful way to give back to your community....</p>
-
-            <h5 class="article-1-readmore"><i>
-                    <a href="food-donations.html" class="link">Read More </a>
-                </i></h5>
-
-        </div>
-        <div class="article-2-light-shadow">
-
-            <img src="/images/school-kid.jpg" class="article-1-picture">
-            <h4 class="article-title">Save the children</h4>
-            <p class="article-2-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd osdfkdof
-                sopdksdo
-                sopdksopdk</p>
-            <p class="article-2-paragraph-2">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd osdfkdof
-                sopdksdo
-                sopdksopdk</p>
+        <img src="/images/article_images/blankets.jpg" class="article-1-picture">
+        <h4 class="article-title">Winter Blanket run</h4>
+        <p class="article-1-paragraph-1">Winter can be an incredibly difficult time for many children, particularly
+            those from less privileged backgrounds.</p>
+        <p class="article-2-paragraph-2">As temperatures drop, these children may lack access to warm clothing and
+            blankets, leaving them at risk of illness and discomfort...</p>
 
 
+        <h5 class="article-1-readmore"><i>
+                <a href="blanket-run.html" class="link">Read More </a>
+            </i></h5>
 
-            <h5 class="article-1-readmore"><i>
-                    <a href="about-us.html" class="link">Read More </a>
-                </i></h5>
+    </div>
+    <div class="article-2-light-shadow">
 
-        </div>
-        <div class="article-3-light-shadow">
-
-            <img src="/images/school-kid.jpg" class="article-1-picture">
-            <h4 class="article-title">Save the children</h4>
-            <p class="article-3-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
-                osdfkdof
-                sopdksdo
-                sopdksopdk</p>
-            <p class="article-3-paragraph-2">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
-                osdfkdof
-                sopdksdo
-                sopdksopdk</p>
+        <img src="/images/article_images/golf.jpg" class="article-1-picture">
+        <h4 class="article-title">2023 Golf day</h4>
+        <p class="article-2-paragraph-1">The 16th of May is an important day for our organization. We are
+            hosting a Golf day to raise funds for
+            our cause. Our organization is dedicated to providing a safe and nurturing environment for children
+            who
+            are in need.</p>
+        <p class="article-2-paragraph-2"></p>
 
 
-            <h5 class="article-1-readmore"><i>
-                    <a href="about-us.html" class="link">Read More </a>
-                </i></h5>
-        </div>
 
-        <!-- -------------------------------------------------footer -->
+        <h5 class="article-1-readmore"><i>
+                <a href="golf-day.html" class="link">Read More </a>
+            </i></h5>
 
-        <footer>
-            <div class="content">
-                <div class="left box">
-                    <div class="topic"><span class="und-footer">Contact U</span>S</div>
-                    <p class="und-footer">15 Dekker Street, Krugersdorp West, Krugersdorp, Gauteng, 1739</p>
-                    <p class="und-footer">Ph. : +27 72 456 0669</p>
-                    <p class="und-footer">opperman.estelle@gmail.com (Estelle Opperman) </p>
+    </div>
+    <div class="article-3-light-shadow">
+
+        <img src="/images/donations.jpg" class="article-1-picture">
+        <h4 class="article-title">The power of donations</h4>
+        <p class="article-3-paragraph-1">The act of donating, whether it's money or time, can have an incredibly
+            powerful impact on both the recipient and the giver. Donations can help to create positive change in the
+            world, whether it's in the form of supporting a charitable organization or helping an individual in need...
+        </p>
+        <p class="article-3-paragraph-2"></p>
 
 
-                </div>
+        <h5 class="article-1-readmore"><i>
+                <a href="donations.html" class="link">Read More </a>
+            </i></h5>
+    </div>
 
-                <div class="right box">
-                    <div class="topic">Email us</div>
-                    <form action="https://formspree.io/f/mzboolwv" method="POST">
-                        <label>
-                            <input type="email" placeholder="Enter email address" name="email">
-                        </label>
-                        &nbsp;
-                        <p style="font-size: x-large">Message</p>
+    <!-- -------------------------------------------------footer -->
 
-                        <label>
-
-                            <textarea name="message" placeholder=" Write a description..."></textarea>
-                        </label>
-                        <input type="submit" name="submit" value="Send">
-                        <div class="media-icons">
-                            <a href="https://www.facebook.com/heartandsoulcommunitycentre" target="_blank"><i
-                                    class="fab fa-facebook-f"></i></a>
-                            <a href="https://www.instagram.com/heart_and_soul_foundation_/" target="_blank"><i
-                                    class="fab fa-instagram"></i></a>
-
-                        </div>
-                    </form>
-                </div>
+    <footer>
+        <div class="content">
+            <div class="left box">
+                <div class="topic"><span class="und-footer">Contact U</span>S</div>
+                <p class="und-footer">15 Dekker Street, Krugersdorp West, Krugersdorp, Gauteng, 1739</p>
+                <p class="und-footer">Ph. : +27 72 456 0669</p>
+                <p class="und-footer">opperman.estelle@gmail.com (Estelle Opperman) </p>
 
 
             </div>
 
-        </footer>
-        <script src="app.js"></script>
+            <div class="right box">
+                <div class="topic">Email us</div>
+                <form action="https://formspree.io/f/mzboolwv" method="POST">
+                    <label>
+                        <input type="email" placeholder="Enter email address" name="email">
+                    </label>
+                    &nbsp;
+                    <p style="font-size: x-large">Message</p>
+
+                    <label>
+
+                        <textarea name="message" placeholder=" Write a description..."></textarea>
+                    </label>
+                    <input type="submit" name="submit" value="Send">
+                    <div class="media-icons">
+                        <a href="https://www.facebook.com/heartandsoulcommunitycentre" target="_blank"><i
+                                class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/heart_and_soul_foundation_/" target="_blank"><i
+                                class="fab fa-instagram"></i></a>
+
+                    </div>
+                </form>
+            </div>
+
+
+        </div>
+
+    </footer>
+    <script src="app.js"></script>
 </body>
