--- a/donations.html
+++ b/donations.html
@@ -20,17 +20,19 @@
     <nav>
 
         <div class="topnav" id="myTopnav">
-            <img src="/images/hear&soulLogo.png" class="logo-position">
-
+            <a href="index.html" class="logolink">
+                <img src="/images/hear&soulLogo.png" class="logo-position">
+            </a>
             <a href="index.html" class="hover-underline-animation">HOME</a>
             <a href="about-us.html" class="hover-underline-animation">ABOUT US</a>
-            <a href="get_involved.html" class=" hover-underline-animation">GET INVOLVED</a>
-            <a href="gallery.html" class="hover-underline-animation">GALLERY</a>
-            <a href="test.html" class=" hover-underline-animation">CONTACT US</a>
+            <a href="get_involved.html" class="hover-underline-animation">GET INVOLVED</a>
+            <a href="gallery.html" class=" hover-underline-animation">GALLERY</a>
+            <a href="contact-us.html" class=" hover-underline-animation">CONTACT US</a>
 
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                 <i class="fa fa-bars"></i>
             </a>
+            <div class="responsive-nav-gap"></div>
             <hr>
         </div>
 
@@ -70,57 +72,49 @@
         </div>
     </div>
     <div class="also-in-this-section-donations">
-        <h2>Also in this section</h2>
+        <h2><u class="u">Also in this sect</u>ion</h2>
 
         <div class="article-1-light-shadow">
 
-            <img src="/images/school-kid.jpg" class="article-1-picture">
-            <h4 class="article-title">FOOD DONATIONS</h4>
-            <p class="article-1-paragraph-1">The Heart and Soul Foundation is an organization that is dedicated to
-                helping those in need by providing
-                food support to the children and elderly people in our care. There are many reasons why donating
-                food
-                to our organization is a worthwhile and impactful way to give back to your community....</p>
+            <img src="/images/article_images/community.jpg" class="article-1-picture">
+            <h4 class="article-title">Making a difference in the community</h4>
+            <p class="article-1-paragraph-1">At our charity organization, we are passionate about creating positive
+                change in our local community. Through our programs and services, we strive to make a ...</p>
 
             <h5 class="article-1-readmore"><i>
-                    <a href="food-donations.html" class="link">Read More </a>
+                    <a href="communities.html" class="link">Read More </a>
                 </i></h5>
 
         </div>
         <div class="article-2-light-shadow">
 
-            <img src="/images/school-kid.jpg" class="article-1-picture">
-            <h4 class="article-title">Save the children</h4>
-            <p class="article-2-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd osdfkdof
-                sopdksdo
-                sopdksopdk</p>
-            <p class="article-2-paragraph-2">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd osdfkdof
-                sopdksdo
-                sopdksopdk</p>
+            <img src="/images/article_images/empty wallet.jpg" class="article-1-picture">
+            <h4 class="article-title">Empowering communities to break the cycle of poverty</h4>
+            <p class="article-2-paragraph-1">Poverty is a complex issue that affects millions of people worldwide. Our
+                charity organization is committed to breaking the cycle of poverty by empowering communities and
+                providing them...</p>
+            <p class="article-2-paragraph-2"></p>
 
 
 
             <h5 class="article-1-readmore"><i>
-                    <a href="about-us.html" class="link">Read More </a>
+                    <a href="cycle-poverty.html" class="link">Read More </a>
                 </i></h5>
 
         </div>
         <div class="article-3-light-shadow">
 
-            <img src="/images/school-kid.jpg" class="article-1-picture">
-            <h4 class="article-title">Save the children</h4>
-            <p class="article-3-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
-                osdfkdof
-                sopdksdo
-                sopdksopdk</p>
-            <p class="article-3-paragraph-2">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
-                osdfkdof
-                sopdksdo
-                sopdksopdk</p>
+            <img src="/images/article_images/blankets.jpg" class="article-1-picture">
+            <h4 class="article-title">Winter Blanket run</h4>
+            <p class="article-3-paragraph-1">Winter can be an incredibly difficult time for many children, particularly
+                those from less privileged backgrounds.</p>
+            <p class="article-3-paragraph-2">As temperatures drop, these children may lack access to warm clothing
+                and blankets,
+                leaving them at risk of...</p>
 
 
             <h5 class="article-1-readmore"><i>
-                    <a href="about-us.html" class="link">Read More </a>
+                    <a href="blanket-run.html" class="link">Read More </a>
                 </i></h5>
         </div>
 
