--- a/golf-day.html
+++ b/golf-day.html
@@ -19,18 +19,21 @@
 <body>
     <nav>
 
-        <div class="topnav" id="myTopnav">
-            <img src="/images/hear&soulLogo.png" class="logo-position">
 
+        <div class="topnav" id="myTopnav">
+            <a href="index.html" class="logolink">
+                <img src="/images/hear&soulLogo.png" class="logo-position">
+            </a>
             <a href="index.html" class="hover-underline-animation">HOME</a>
             <a href="about-us.html" class="hover-underline-animation">ABOUT US</a>
-            <a href="get_involved.html" class=" hover-underline-animation">GET INVOLVED</a>
-            <a href="gallery.html" class="hover-underline-animation">GALLERY</a>
-            <a href="test.html" class=" hover-underline-animation">CONTACT US</a>
+            <a href="get_involved.html" class="hover-underline-animation">GET INVOLVED</a>
+            <a href="gallery.html" class=" hover-underline-animation">GALLERY</a>
+            <a href="contact-us.html" class=" hover-underline-animation">CONTACT US</a>
 
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                 <i class="fa fa-bars"></i>
             </a>
+            <div class="responsive-nav-gap"></div>
             <hr>
         </div>
 
@@ -38,7 +41,7 @@
 
 
     <div class="food-donations-color">
-        <img src="/images/article_images/golf.jpg" class="food-donations-img">
+        <img src="/images/article_images/golf.jpg" class="golf-donations-img">
         <span class="golf-main-heading">GOLF</span>
         <span class="golf-main-heading-2">DAY</span>
         <div class="article-content">
@@ -103,11 +106,11 @@
         </div>
     </div>
     <div class="also-in-this-section-golf">
-        <h2 c>Also in this section</h2>
+        <h2><u class="u">Also in this sect</u>ion</h2>
 
         <div class="article-1-light-shadow">
 
-            <img src="/images/school-kid.jpg" class="article-1-picture">
+            <img src="/images/article_images/food_donations.jpg" class="article-1-picture">
             <h4 class="article-title">FOOD DONATIONS</h4>
             <p class="article-1-paragraph-1">The Heart and Soul Foundation is an organization that is dedicated to
                 helping those in need by providing
@@ -122,38 +125,35 @@
         </div>
         <div class="article-2-light-shadow">
 
-            <img src="/images/school-kid.jpg" class="article-1-picture">
-            <h4 class="article-title">Save the children</h4>
-            <p class="article-2-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd osdfkdof
-                sopdksdo
-                sopdksopdk</p>
-            <p class="article-2-paragraph-2">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd osdfkdof
-                sopdksdo
-                sopdksopdk</p>
+            <img src="/images/article_images/empty wallet.jpg" class="article-1-picture">
+            <h4 class="article-title">Empowering communities to break the cycle of poverty</h4>
+            <p class="article-2-paragraph-1">Poverty is a complex issue that affects millions of people worldwide. Our
+                charity organization is committed to breaking the cycle of poverty by empowering communities and
+                providing them...
+
+            </p>
+            <p class="article-2-paragraph-2"></p>
 
 
 
             <h5 class="article-1-readmore"><i>
-                    <a href="about-us.html" class="link">Read More </a>
+                    <a href="cycle-poverty.html" class="link">Read More </a>
                 </i></h5>
 
         </div>
         <div class="article-3-light-shadow">
 
-            <img src="/images/school-kid.jpg" class="article-1-picture">
-            <h4 class="article-title">Save the children</h4>
-            <p class="article-3-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
-                osdfkdof
-                sopdksdo
-                sopdksopdk</p>
-            <p class="article-3-paragraph-2">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
-                osdfkdof
-                sopdksdo
-                sopdksopdk</p>
+            <img src="/images/donations.jpg" class="article-1-picture">
+            <h4 class="article-title">The power of donations</h4>
+            <p class="article-3-paragraph-1">The act of donating, whether it's money or time, can have an incredibly
+                powerful impact on both the recipient and the giver. Donations can help to create positive change in the
+                world, whether it's in the form of supporting a charitable organization or helping an individual in
+                need.</p>
+            <p class="article-3-paragraph-2"></p>
 
 
             <h5 class="article-1-readmore"><i>
-                    <a href="about-us.html" class="link">Read More </a>
+                    <a href="donations.html" class="link">Read More </a>
                 </i></h5>
         </div>
 
